Fixed some coloring and spacing issues Signed-off-by: Waylon Huang <waylonh@cs.washington.edu>

--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ Orange: #f4511e;
 }
 
 footer {
-	background-color: #757575;
+	background-color: #29ABE2;
 	color: #ffffff;
 }
 
